--- a/Tugas1_535230052_Joshua Atmadjaya/style.css
+++ b/Tugas1_535230052_Joshua Atmadjaya/style.css
@@ -1,81 +1,97 @@
-:root
-
-*
+* 
 {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-html, body
+body
 {
-    height:100%;
-    margin:0;
-    padding:0   ;
     font-family: sans-serif;    
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+    font-size: 1.641rem;
 }
 
-ul
+@font-face 
 {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-a
-{
-    text-decoration: none;
-    color: var(--white);
+    font-family: NgutangDong;
+    src: url(fonts/ngutangdong.ttf);
 }
 
-.BackgroundImage
+#backgroundContainer
 {
-    background-image: url('background.jpg');
-    height: 100%;   
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
 }
 
-.blur-backdrop
-{
-    background-color: rgba(255, 255, 255, 0.1);
-    -webkit-backdrop-filter: blur(25px);
-    backdrop-filter: blur(25px);
-    height: inherit;
+#background
+{   
+    display: block;
+    position: absolute;
+    width: 100%;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    -webkit-filter:  blur(2px) grayscale(10%);
+    filter:  blur(2px) grayscale(10%);  
 }
 
-@media only screen and (max-width: 784px) 
+
+@media screen and (max-aspect-ratio: 1920/1080) 
 {
-    
-    .BackgroundImage
-    {
-        background-size: auto;
+    #background {
         height: 100%;
+        width: auto;
     }
+}    
 
-}
-
-.content
+#content
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    margin: auto;
+    max-width: 640px;
+    padding: 8px;
+    color: white;
+    background-color: rgba(5,98,167,0.75);
+    z-index: 2;
+  
 }
 
 .container1
 {
-    display: block;
+    display: flex;
     justify-content: center;
-    align-items: center;
+}
+
+.profileContainer
+{
+    padding: 20px;
+}
+
+#profile
+{
+    padding: 5px;
+    text-align: center;
+}
+
+.name1
+{
+    font-weight: bold;
+}
+.name2
+{
+    font-size: 1rem;
 }
 
 .profilePicture
 {
-    width: 100px;
-    height:100px;
+    width: 200px;
+    height:200px;
     object-fit: cover;
     border-radius: 100px;
-    
 }
 
 .profilePictureContainer
@@ -83,5 +99,10 @@ a
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.text
+{
+    font-family: NgutangDong;
 }
 
